# vc-audit-tool

./: .gitignore  DIRECTIONS.md  README.md
backend/: main.py  pyproject.toml
backend/api/: routes.py
backend/data/: market_data.py
backend/engine/: base.py  last_round.py
backend/models/: requests.py  responses.py
backend/tests/: test_api.py  test_engine.py
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ValuationForm.tsx  ValuationResult.tsx
